feat: create consumer for search data fipe